# Empty-django-template-v1

./: .dockerignore  .pdm-python  Dockerfile  README.MD  docker-compose.local.yml  docker-compose.yml  pyproject.toml
project/: urls.py
project/settings/: settings.py
